--- a/index.html
+++ b/index.html
@@ -170,7 +170,13 @@
             <div class="bg-white rounded-lg shadow-md p-6 flex flex-col justify-center items-center">
                  <h3 class="text-xl font-bold text-center text-[#006494] mb-4">Promozione e divulgazione</h3>
                  <div class="text-6xl text-[#00A6FB]">📢</div>
-                 <p class="text-center mt-4">Un **post/reel** per i social media aumenterà la visibilità del progetto, coinvolgendo la comunità e i familiari sui rischi della malnutrizione e sull'importanza della prevenzione.</p>
+                 <p class="text-center mt-4">Prevenire la Malnutrizione: Il Ruolo Chiave dell'Alimentazione 🍎🥕
+La prevenzione della malnutrizione ospedaliera inizia con un'attenzione mirata all'alimentazione! Non tutti i pazienti hanno le stesse esigenze, ed è fondamentale che la dieta sia personalizzata e adeguata alle condizioni cliniche.
+Ecco alcuni punti chiave per una nutrizione efficace in ospedale:
+- Screening Nutrizionale: Ogni paziente dovrebbe essere valutato al momento del ricovero per identificare il rischio di malnutrizione.
+- Piani Alimentari Personalizzati: Le diete devono considerare patologie, allergie, intolleranze e preferenze individuali.
+- Supporto Nutrizionale: Se l'alimentazione orale non è sufficiente, possono essere necessari integratori specifici o nutrizione artificiale (enterale o parenterale), sempre sotto stretto controllo medico.
+Ricorda: un'alimentazione adeguata è parte integrante del processo di cura e guarigione!</p>
             </div>
 
         </main>
